--- a/filetype/index.html
+++ b/filetype/index.html
@@ -20,11 +20,11 @@
 
 	<p class="meta">
 		by
-		<a href="" ="http://www.instagram.com/vishaalxd">Vishal Philip</a>
+		<a href="http://www.instagram.com/vishaalxd">Vishal Philip</a>
 		, credits to
 		<a href="http://www.guyswhocode.com"> GWC labs </a>
 		<br></br>
-		please report issues on <a href="http://wwww.github.com/vishaalxd">github</a>
+		please report issues on <a href="https://github.com/vishaalxd">github</a>
 		<br><br><br><br>
 	</p>
 
